Localization:Gamification, banners, shop,All games/soundImplementation and UI correction for all games

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -299,6 +299,8 @@
   "comingSoon": "قريبًا",
   "unableToOpenTheLink": "غير قادر على فتح الرابط",
   "thankYouForYourPatience": "شكرًا على صبرك",
+  "traceEachLetterToEarnOneXp": "تتبع كل حرف لتحصل على 1 نقطة خبرة",
+  "collectTenXpToEarnOneTolimToken": "اجمع 10 نقاط خبرة لتحصل على 1 رمز توليم",
 
 
  "manageBackup": "إدارة النسخ الاحتياطي",
@@ -400,13 +402,84 @@
                 "credits": "المصادر",
                 "info": "منصة تعليمية مبتكرة تمزج بين التعلم والألعاب والثقافة لجعل التعليم ممتعًا وجذابًا للطلاب في المغرب وخارجه.",
                 "aboutMission": "تهدف MoorTaalim إلى تمكين الطلاب من خلال توفير محتوى تعليمي تفاعلي يحترم الثقافة المغربية ويعزز حب التعلم. نحن نؤمن أن التعليم يجب أن يكون ممتعًا ومتيسرًا وملائمًا ثقافيًا.",
-                "aboutFuturePlans": "نعمل باستمرار على إضافة دورات جديدة، وألعاب متعددة اللاعبين مثيرة، وميزات متقدمة مثل مسارات تعلم شخصية ومنتديات مجتمعية لربط المتعلمين والمعلمين."
+                "aboutFuturePlans": "نعمل باستمرار على إضافة دورات جديدة، وألعاب متعددة اللاعبين مثيرة، وميزات متقدمة مثل مسارات تعلم شخصية ومنتديات مجتمعية لربط المتعلمين والمعلمين.",
 
+  "thanksForYourPurchase": "شكراً على شرائك",
+  "transactionComplete": "اكتملت المعاملة",
+  "keepShining": "استمر في التألق",
+  "keepCollecting": "استمر في الجمع",
+  "badgeUnlocked": "تم فتح الشارة",
+  "level": "المستوى",
+  "quick": "سريع",
+  "rare": "نادر",
+  "rewardScreen": "شاشة المكافأة",
+  "tapAnywhereToContinue": "اضغط في أي مكان للمتابعة",
+  "collected": "تم الجمع",
+  "earnMoreToUnlockThisAvatar": "اجمع المزيد لفتح هذا الشكل الرمزي",
+  "selected": "مختار",
+  "unlocked": "مفتوح",
+  "unlockBanner": "فتح البانر",
+  "banner": "بانر",
+  "unlockThis": "افتح هذا",
+  "confirmPurchase": "تأكيد الشراء",
+  "avatarUnlocked": "تم فتح الشكل الرمزي",
+  "enjoy": "استمتع",
+  "doYouWantToUnlockThis": "هل تريد فتح هذا؟",
+  "go": "اذهب",
+  "profileSaved": "تم حفظ الملف الشخصي",
+  "nameRule": "يجب أن يكون الاسم 3 أحرف على الأقل",
+  "invalidEmail": "عنوان البريد الإلكتروني غير صالح",
+  "readyToSave": "جاهز للحفظ",
+  "royalty": "الملكية",
+  "babies": "الأطفال",
 
+  "myMasterpiece": "تحفتي",
+  "youCanSpendONETolimToSaveOrWatchTwoAdsToSaveForFree": "يمكنك إنفاق 5 توليم للحفظ أو مشاهدة إعلانين للحفظ مجاناً",
+  "spendONETolim": "إنفاق 5 توليم",
+  "confirmSpending": "تأكيد الإنفاق",
+  "thisWillDeductONEtolimProceed": "سيتم خصم 5 توليم. المتابعة؟",
+  "failedToSaveDrawing": "فشل في حفظ الرسم",
+  "chooseColor": "اختر اللون",
+  "brush": "فرشاة",
+  "brushSize": "حجم الفرشاة",
+  "eraser": "ممحاة",
+  "eraserOff": "الممحاة مطفأة",
+  "eraserOn": "الممحاة مفعّلة",
+  "clearCanvas": "مسح اللوحة",
 
+  "animalSound": "صوت الحيوان",
+  "listenMode": "وضع الاستماع",
+  "tapAnimalsToHearTheirSounds": "اضغط على الحيوانات لسماع أصواتها",
+  "matchAndDrop": "طابق وأسقط",
+  "dragAnimalsToMatchTheirSounds": "اسحب الحيوانات لمطابقة أصواتها",
+  "tapTheAnimalToHearItsSound": "اضغط على الحيوان لسماع صوته",
+  "matchTheSound": "طابق الصوت",
+  "listenThenDragTheCorrectAnimalIntoTheGlowingRing": "استمع ثم اسحب الحيوان الصحيح إلى الحلقة المضيئة",
+  "rewarded": "تمت مكافأتك",
+  "youFinishedWith": "لقد أنهيت بـ",
+  "dontWorry": "لا تقلق",
+  "youCanTryAgain": "يمكنك المحاولة مرة أخرى",
 
-
-
-
+  "adventureMode": "وضع المغامرة",
+  "memoryFlip": "قلب الذاكرة",
+  "playThroughLevelsAndEarn": "العب المستويات واكسب المكافآت",
+  "survivalMode": "وضع البقاء",
+  "seeHowLongYouCanSurviveWithLimitedMoves": "انظر كم يمكنك البقاء مع تحركات محدودة",
+  "selectLevel": "اختر المستوى",
+  "chooseCategory": "اختر الفئة",
+  "moves": "الحركات",
+  "matches": "التطابقات",
+  "noMovesLeft": "لا توجد حركات متبقية",
+  "restartingLevel": "إعادة تشغيل المستوى",
+  "restart": "إعادة التشغيل",
+  "youRanOutOfMoves": "لقد نفدت الحركات",
+  "highlights": "أهم الإنجازات",
+  "youSurvivedFor": "لقد نجوت لمدة",
+  "best": "الأفضل",
+  "andMade": "وحققت",
+  "seconds": "ثوانٍ",
+  "matchesIn": "مطابقات في",
+  "survivalHighlights": "أهم إنجازات البقاء",
+  "bestSurvivalScore": "أفضل نتيجة بقاء"
 
 }
