--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -290,6 +290,8 @@
   "comingSoon": "Demnächst verfügbar",
   "unableToOpenTheLink": "Link konnte nicht geöffnet werden",
   "thankYouForYourPatience": "Vielen Dank für Ihre Geduld",
+  "traceEachLetterToEarnOneXp": "Verfolge jeden Buchstaben, um 1 XP zu verdienen",
+  "collectTenXpToEarnOneTolimToken": "Sammle 10 XP, um 1 Tolim-Token zu verdienen",
 
  "manageBackup": "Backup verwalten",
   "backupAndRestore": "Backup und Wiederherstellung",
@@ -390,7 +392,85 @@
                 "credits": "Quellen",
                 "info": "Eine innovative Bildungsplattform, die Lernen, Spiele und Kultur kombiniert, um Bildung für Schüler in Marokko und darüber hinaus unterhaltsam und ansprechend zu gestalten.",
                 "aboutMission": "MoorTaalim möchte Schüler befähigen, indem interaktive Bildungsinhalte bereitgestellt werden, die die marokkanische Kultur respektieren und die Freude am Lernen fördern. Wir glauben, dass Bildung unterhaltsam, zugänglich und kulturell relevant sein sollte.",
-                "aboutFuturePlans": "Wir arbeiten kontinuierlich daran, neue Kurse, spannende Mehrspieler-Spiele und fortschrittliche Funktionen wie personalisierte Lernpfade und Community-Foren hinzuzufügen, um Lernende und Lehrende zu verbinden."
+                "aboutFuturePlans": "Wir arbeiten kontinuierlich daran, neue Kurse, spannende Mehrspieler-Spiele und fortschrittliche Funktionen wie personalisierte Lernpfade und Community-Foren hinzuzufügen, um Lernende und Lehrende zu verbinden.",
+
+  "thanksForYourPurchase": "Danke für deinen Einkauf",
+  "transactionComplete": "Transaktion abgeschlossen",
+  "keepShining": "Weiter strahlen",
+  "keepCollecting": "Weiter sammeln",
+  "badgeUnlocked": "Abzeichen freigeschaltet",
+  "level": "LEVEL",
+  "quick": "Schnell",
+  "rare": "Selten",
+  "rewardScreen": "Belohnungsbildschirm",
+  "tapAnywhereToContinue": "Überall tippen, um fortzufahren",
+  "collected": "Gesammelt",
+  "earnMoreToUnlockThisAvatar": "Sammle mehr, um diesen Avatar freizuschalten",
+  "selected": "AUSGEWÄHLT",
+  "unlocked": "FREIGESCHALTET",
+  "unlockBanner": "Banner freischalten",
+  "banner": "Banner",
+  "unlockThis": "Dies freischalten",
+  "confirmPurchase": "Kauf bestätigen",
+  "avatarUnlocked": "Avatar freigeschaltet",
+  "enjoy": "Viel Spaß",
+  "doYouWantToUnlockThis": "Möchtest du das freischalten?",
+  "go": "Los",
+  "profileSaved": "Profil gespeichert",
+  "nameRule": "Der Name muss mindestens 3 Zeichen enthalten",
+  "invalidEmail": "Ungültige E-Mail-Adresse",
+  "readyToSave": "Bereit zum Speichern",
+  "royalty": "Adel",
+  "babies": "Babys",
+
+  "myMasterpiece": "Mein Meisterwerk",
+  "youCanSpendONETolimToSaveOrWatchTwoAdsToSaveForFree": "Du kannst 5 Tolim ausgeben, um zu speichern, oder 2 Anzeigen ansehen, um kostenlos zu speichern",
+  "spendONETolim": "5 Tolim ausgeben",
+  "confirmSpending": "Ausgabe bestätigen",
+  "thisWillDeductONEtolimProceed": "Dies wird 5 Tolim abziehen. Fortfahren?",
+  "failedToSaveDrawing": "Speichern der Zeichnung fehlgeschlagen",
+  "chooseColor": "Farbe wählen",
+  "brush": "Pinsel",
+  "brushSize": "Pinselgröße",
+  "eraser": "Radiergummi",
+  "eraserOff": "Radiergummi aus",
+  "eraserOn": "Radiergummi an",
+  "clearCanvas": "Leinwand löschen",
+
+  "animalSound": "Tiergeräusch",
+  "listenMode": "Hörmodus",
+  "tapAnimalsToHearTheirSounds": "Tippe auf die Tiere, um ihre Geräusche zu hören",
+  "matchAndDrop": "Zuordnen und ablegen",
+  "dragAnimalsToMatchTheirSounds": "Ziehe die Tiere, um ihre Geräusche zuzuordnen",
+  "tapTheAnimalToHearItsSound": "Tippe auf das Tier, um sein Geräusch zu hören",
+  "matchTheSound": "Ordne das Geräusch zu",
+  "listenThenDragTheCorrectAnimalIntoTheGlowingRing": "Höre zu und ziehe dann das richtige Tier in den leuchtenden Ring",
+  "rewarded": "Belohnt",
+  "youFinishedWith": "Du hast abgeschlossen mit",
+  "dontWorry": "Keine Sorge",
+  "youCanTryAgain": "Du kannst es noch einmal versuchen",
+
+  "adventureMode": "Abenteuermodus",
+  "memoryFlip": "Memory Flip",
+  "playThroughLevelsAndEarn": "Spiele Levels durch und verdiene Belohnungen",
+  "survivalMode": "Überlebensmodus",
+  "seeHowLongYouCanSurviveWithLimitedMoves": "Sieh, wie lange du mit begrenzten Zügen überleben kannst",
+  "selectLevel": "Level auswählen",
+  "chooseCategory": "Kategorie wählen",
+  "moves": "Züge",
+  "matches": "Paarungen",
+  "noMovesLeft": "Keine Züge mehr übrig",
+  "restartingLevel": "Level wird neu gestartet",
+  "restart": "Neustarten",
+  "youRanOutOfMoves": "Du hast keine Züge mehr",
+  "highlights": "Highlights",
+  "youSurvivedFor": "Du hast überlebt für",
+  "best": "Beste",
+  "andMade": "und hast gemacht",
+  "seconds": "Sekunden",
+  "matchesIn": "Paarungen in",
+  "survivalHighlights": "Überlebens-Highlights",
+  "bestSurvivalScore": "Beste Überlebenspunktzahl"
 
 
 
