--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -306,6 +306,8 @@
   "comingSoon": "Coming Soon",
   "unableToOpenTheLink": "Unable To Open The Link",
   "thankYouForYourPatience": "Thank You For Your Patience",
+  "traceEachLetterToEarnOneXp": "Trace each letter to earn 1 XP",
+  "collectTenXpToEarnOneTolimToken": "Collect 10 XP to earn 1 Tolim token",
 
 "manageBackup": "Manage Backup",
   "backupAndRestore": "Backup and Restore",
@@ -395,18 +397,96 @@
               "male": "Male",
               "female": "Female",
 
-             "ourMission": "Our Mission",
-              "futurePlans": "Future Plans",
-              "chooseYourAvatar": "Choose Your Avatar",
-              "profileInfo": "Profile Information",
-              "email": "Email",
-               "dontShowAgain": "Do not show again",
-                "informationTechnology": "Information Technology",
-                "islam": "Islam",
-                "credits": "Credits",
-                "info": "An innovative educational platform blending learning, games, and culture to make education fun and engaging for students in Morocco and beyond.",
-                "aboutMission": "MoorTaalim aims to empower students by providing interactive educational content that respects Moroccan culture and promotes a love of learning. We believe education should be enjoyable, accessible, and culturally relevant.",
-                "aboutFuturePlans": "We're continuously working to add new courses, exciting multiplayer games, and advanced features like personalized learning paths and community forums to connect learners and educators."
+  "ourMission": "Our Mission",
+  "futurePlans": "Future Plans",
+  "chooseYourAvatar": "Choose Your Avatar",
+  "profileInfo": "Profile Information",
+  "email": "Email",
+  "dontShowAgain": "Do not show again",
+  "informationTechnology": "Information Technology",
+  "islam": "Islam",
+  "credits": "Credits",
+  "info": "An innovative educational platform blending learning, games, and culture to make education fun and engaging for students in Morocco and beyond.",
+  "aboutMission": "MoorTaalim aims to empower students by providing interactive educational content that respects Moroccan culture and promotes a love of learning. We believe education should be enjoyable, accessible, and culturally relevant.",
+  "aboutFuturePlans": "We're continuously working to add new courses, exciting multiplayer games, and advanced features like personalized learning paths and community forums to connect learners and educators.",
+
+  "thanksForYourPurchase": "Thanks for your purchase",
+  "transactionComplete": "Transaction complete",
+  "keepShining": "Keep shining",
+  "keepCollecting": "Keep collecting",
+  "badgeUnlocked": "Badge unlocked",
+  "level": "LEVEL",
+  "quick": "Quick",
+  "rare": "Rare",
+  "rewardScreen": "Reward screen",
+  "tapAnywhereToContinue": "Tap anywhere to continue",
+  "collected": "Collected",
+  "earnMoreToUnlockThisAvatar": "Earn more to unlock this avatar",
+  "selected": "SELECTED",
+  "unlocked": "UNLOCKED",
+  "unlockBanner": "Unlock banner",
+  "banner": "Banner",
+  "unlockThis": "Unlock this",
+  "confirmPurchase": "Confirm purchase",
+  "avatarUnlocked": "Avatar unlocked",
+  "enjoy": "Enjoy",
+  "doYouWantToUnlockThis": "Do you want to unlock this?",
+  "go": "Go",
+  "profileSaved": "Profile saved",
+  "nameRule": "Name must be at least 3 characters",
+  "invalidEmail": "Invalid email address",
+  "readyToSave": "Ready to save",
+  "royalty": "Royalty",
+  "babies": "Babies",
+
+  "myMasterpiece": "My Masterpiece",
+  "youCanSpendONETolimToSaveOrWatchTwoAdsToSaveForFree": "You can spend 5 Tolim to save or watch 2 ads to save for free",
+  "spendONETolim": "Spend 5 Tolim",
+  "confirmSpending": "Confirm Spending",
+  "thisWillDeductONEtolimProceed": "This will deduct 5 Tolim. Proceed?",
+  "failedToSaveDrawing": "Failed to save drawing",
+  "chooseColor": "Choose Color",
+  "brush": "Brush",
+  "brushSize": "Brush Size",
+  "eraser": "Eraser",
+  "eraserOff": "Eraser Off",
+  "eraserOn": "Eraser On",
+  "clearCanvas": "Clear Canvas",
+
+  "animalSound": "Animal Sound",
+  "listenMode": "Listen Mode",
+  "tapAnimalsToHearTheirSounds": "Tap animals to hear their sounds",
+  "matchAndDrop": "Match and Drop",
+  "dragAnimalsToMatchTheirSounds": "Drag animals to match their sounds",
+  "tapTheAnimalToHearItsSound": "Tap the animal to hear its sound",
+  "matchTheSound": "Match the sound",
+  "listenThenDragTheCorrectAnimalIntoTheGlowingRing": "Listen, then drag the correct animal into the glowing ring",
+  "rewarded": "Rewarded",
+  "youFinishedWith": "You finished with",
+  "dontWorry": "Don't worry",
+  "youCanTryAgain": "You can try again",
+
+  "adventureMode": "Adventure Mode",
+  "memoryFlip": "Memory Flip",
+  "playThroughLevelsAndEarn": "Play through levels and earn rewards",
+  "survivalMode": "Survival Mode",
+  "seeHowLongYouCanSurviveWithLimitedMoves": "See how long you can survive with limited moves",
+  "selectLevel": "Select Level",
+  "chooseCategory": "Choose Category",
+  "moves": "Moves",
+  "matches": "Matches",
+  "noMovesLeft": "No moves left",
+  "restartingLevel": "Restarting level",
+  "restart": "Restart",
+  "youRanOutOfMoves": "You ran out of moves",
+  "highlights": "Highlights",
+  "youSurvivedFor": "You survived for",
+  "best": "Best",
+  "andMade": "and made",
+  "seconds": "seconds",
+  "matchesIn": "matches in",
+  "survivalHighlights": "Survival Highlights",
+  "bestSurvivalScore": "Best Survival Score"
 
 
 
