--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -304,6 +304,8 @@
   "comingSoon": "Bientôt disponible",
   "unableToOpenTheLink": "Impossible d’ouvrir le lien",
   "thankYouForYourPatience": "Merci pour votre patience",
+  "traceEachLetterToEarnOneXp": "Trace chaque lettre pour gagner 1 XP",
+  "collectTenXpToEarnOneTolimToken": "Collecte 10 XP pour gagner 1 jeton Tolim",
 
  "manageBackup": "Gérer la sauvegarde",
   "backupAndRestore": "Sauvegarder et restaurer",
@@ -403,10 +405,85 @@
                 "credits": "Crédits",
                 "info": "Une plateforme éducative innovante combinant apprentissage, jeux et culture pour rendre l'éducation amusante et captivante pour les élèves au Maroc et au-delà.",
                 "aboutMission": "MoorTaalim vise à autonomiser les élèves en fournissant du contenu éducatif interactif qui respecte la culture marocaine et favorise l'amour de l'apprentissage. Nous croyons que l'éducation doit être agréable, accessible et culturellement pertinente.",
-                "aboutFuturePlans": "Nous travaillons continuellement à ajouter de nouveaux cours, des jeux multijoueurs passionnants et des fonctionnalités avancées telles que des parcours d'apprentissage personnalisés et des forums communautaires pour connecter les apprenants et les éducateurs."
+                "aboutFuturePlans": "Nous travaillons continuellement à ajouter de nouveaux cours, des jeux multijoueurs passionnants et des fonctionnalités avancées telles que des parcours d'apprentissage personnalisés et des forums communautaires pour connecter les apprenants et les éducateurs.",
 
+  "thanksForYourPurchase": "Merci pour votre achat",
+  "transactionComplete": "Transaction terminée",
+  "keepShining": "Continuez à briller",
+  "keepCollecting": "Continuez à collecter",
+  "badgeUnlocked": "Badge débloqué",
+  "level": "NIVEAU",
+  "quick": "Rapide",
+  "rare": "Rare",
+  "rewardScreen": "Écran de récompense",
+  "tapAnywhereToContinue": "Touchez n'importe où pour continuer",
+  "collected": "Collecté",
+  "earnMoreToUnlockThisAvatar": "Gagnez plus pour débloquer cet avatar",
+  "selected": "SÉLECTIONNÉ",
+  "unlocked": "DÉBLOQUÉ",
+  "unlockBanner": "Débloquer la bannière",
+  "banner": "Bannière",
+  "unlockThis": "Débloquer ceci",
+  "confirmPurchase": "Confirmer l'achat",
+  "avatarUnlocked": "Avatar débloqué",
+  "enjoy": "Profitez-en",
+  "doYouWantToUnlockThis": "Voulez-vous débloquer ceci ?",
+  "go": "Aller",
+  "profileSaved": "Profil enregistré",
+  "nameRule": "Le nom doit contenir au moins 3 caractères",
+  "invalidEmail": "Adresse e-mail invalide",
+  "readyToSave": "Prêt à enregistrer",
+  "royalty": "Royauté",
+  "babies": "Bébés",
 
+  "myMasterpiece": "Mon chef-d'œuvre",
+  "youCanSpendONETolimToSaveOrWatchTwoAdsToSaveForFree": "Vous pouvez dépenser 5 Tolim pour enregistrer ou regarder 2 publicités pour enregistrer gratuitement",
+  "spendONETolim": "Dépenser 5 Tolim",
+  "confirmSpending": "Confirmer la dépense",
+  "thisWillDeductONEtolimProceed": "Cela déduira 5 Tolim. Continuer ?",
+  "failedToSaveDrawing": "Échec de l'enregistrement du dessin",
+  "chooseColor": "Choisir la couleur",
+  "brush": "Pinceau",
+  "brushSize": "Taille du pinceau",
+  "eraser": "Gomme",
+  "eraserOff": "Gomme désactivée",
+  "eraserOn": "Gomme activée",
+  "clearCanvas": "Effacer la toile",
 
+  "animalSound": "Son des animaux",
+  "listenMode": "Mode écoute",
+  "tapAnimalsToHearTheirSounds": "Touchez les animaux pour entendre leurs sons",
+  "matchAndDrop": "Associer et déposer",
+  "dragAnimalsToMatchTheirSounds": "Faites glisser les animaux pour associer leurs sons",
+  "tapTheAnimalToHearItsSound": "Touchez l'animal pour entendre son son",
+  "matchTheSound": "Associez le son",
+  "listenThenDragTheCorrectAnimalIntoTheGlowingRing": "Écoutez, puis faites glisser le bon animal dans l'anneau lumineux",
+  "rewarded": "Récompensé",
+  "youFinishedWith": "Vous avez terminé avec",
+  "dontWorry": "Ne vous inquiétez pas",
+  "youCanTryAgain": "Vous pouvez réessayer",
+
+  "adventureMode": "Mode aventure",
+  "memoryFlip": "Retour de mémoire",
+  "playThroughLevelsAndEarn": "Jouez aux niveaux et gagnez des récompenses",
+  "survivalMode": "Mode survie",
+  "seeHowLongYouCanSurviveWithLimitedMoves": "Voyez combien de temps vous pouvez survivre avec des mouvements limités",
+  "selectLevel": "Sélectionner le niveau",
+  "chooseCategory": "Choisir la catégorie",
+  "moves": "Mouvements",
+  "matches": "Paires",
+  "noMovesLeft": "Plus de mouvements disponibles",
+  "restartingLevel": "Redémarrage du niveau",
+  "restart": "Redémarrer",
+  "youRanOutOfMoves": "Vous n'avez plus de mouvements",
+  "highlights": "Points forts",
+  "youSurvivedFor": "Vous avez survécu pendant",
+  "best": "Meilleur",
+  "andMade": "et avez réalisé",
+  "seconds": "secondes",
+  "matchesIn": "paires en",
+  "survivalHighlights": "Points forts de survie",
+  "bestSurvivalScore": "Meilleur score de survie"
 
 
 
