--- a/lib/l10n/app_zgh.arb
+++ b/lib/l10n/app_zgh.arb
@@ -298,6 +298,8 @@
   "comingSoon": "ⴽⵔⵉⴼ ⴳ ⵜⴰⵙⵔⵓⴼⵜ",
   "unableToOpenTheLink": "ⵉⵙ ⵍⵍⴰ ⴰⴷ ⵜⵉⵔⵉ ⵉⵙⴻⵏⴳⵍⵉ",
   "thankYouForYourPatience": "ⴰⵣⵓⵍ ⴼⴰⵡⴰⵏ ⵉⵙ ⵜⵉⵣⵔⵉⴼⵜ ⵉⵏⵓⵙ",
+  "traceEachLetterToEarnOneXp": "ⵜⴰⵙⵎⵉ ⴽⵍⵍⴰ ⴰⵣⵓⵍ ⵏ ⴰⵎⴰⵣⵉⵖ ⴰⵏⴰ ⴷ 1 XP",
+  "collectTenXpToEarnOneTolimToken": "ⵙⵙⵏⵉ ⵉⵙⵎⴹⴰⵔ 10 XP ⴰⴷ ⵜⴰⵙⵎⵉ 1 ⵜⴰⴳⴻⵎⵜ ⵏ Tolim",
 
  "manageBackup": "ⵜⴰⵙⵙⴷⴷⵓⴷ ⵏ ⵜⴰⵣⵡⴰⵔⴰ",
   "backupAndRestore": "ⵜⴰⵣⵡⴰⵔⴰ ⴷ ⵜⴰⵙⵙⴷⴷⵓⴷ",
@@ -398,9 +400,85 @@
                     "credits": "ⴰⵎⴰⵙⵓⵏ",
                     "info": "ⴰⵎⵏⴰⵡⵉ ⵓⵎⵓⵔ ⵜⴰⵎⵓⴷⵉⵏⵜ, ⵜⵓⵏⴰⵎⵜ ⵓⴳⴷⵉⵎ ⵏ ⵜⴰⴷⵓⵍⵉⵎⵏ ⵓⵎⴰⵣⵉⵖ ⵏ ⵎⴰⵔⵓⴽⵓ ⴷ ⴷⵓⵏⵢⴰⵏ.",
                     "aboutMission": "ⵎⵓⵔⵜⴰⵄⴰⵍⵉⵎ ⵣⵓⵍ ⵉⵎⵎⵓⵔⵉ ⵏ ⵉⴷⵔⵉⵣⵉ ⵉⵎⵎⴰⵣⵉⵖⵏ ⴷ ⵓⵙⵙⵓⵎⵎ ⵏ ⵎⴰⵔⵓⴽⵓ. ⴰⵎⵏⴰⵡⵉ ⵓⵙⵙⵉⵏ ⵏ ⵓⴳⴷⵉⵎ, ⵓⴳⵏⴰⵡ ⵏ ⵎⴰⵣⵉⵖ ⵓⵙⵙⵓⵎⵎ.",
-                    "aboutFuturePlans": "ⵎⴰⵏⴰ ⵣⵓⵍ ⵉⵙⵙⵓⵎⵎ ⵏ ⴷⵓⵍ ⵉⵙⵏⵏⴰⵡⵏ, ⵓⵏⵙⵏⴰ ⵏ ⵉⵎⴰⵙⵉⵏ ⵓⵙⵙⵓⵎⵎ ⵏ ⵉⵎⵎⵓⵔⵉ ⵓⵏⵙⵏⴰ ⵏ ⵎⴰⵔⵓⴽⵓ ⵓⵙⵙⵓⵎⵎ."
+                    "aboutFuturePlans": "ⵎⴰⵏⴰ ⵣⵓⵍ ⵉⵙⵙⵓⵎⵎ ⵏ ⴷⵓⵍ ⵉⵙⵏⵏⴰⵡⵏ, ⵓⵏⵙⵏⴰ ⵏ ⵉⵎⴰⵙⵉⵏ ⵓⵙⵙⵓⵎⵎ ⵏ ⵉⵎⵎⵓⵔⵉ ⵓⵏⵙⵏⴰ ⵏ ⵎⴰⵔⵓⴽⵓ ⵓⵙⵙⵓⵎⵎ.",
 
+  "thanksForYourPurchase": "ⵙⴰⵎⵎⵓⵙ ⵏ ⵜⵓⵏⴰⵡⵍⴰⵢⵏⴰⵏ",
+  "transactionComplete": "ⵜⴰⴳⵍⵍⴰⵍⵜ ⴷ ⵜⵓⵏⴰⵡⵍⴰⵢ",
+  "keepShining": "ⵙⴻⴹⵉ ⴰⵢⵏⴰ ⴳⵯⵓⵔ",
+  "keepCollecting": "ⵙⴻⴹⵉ ⴰⵢⵏⴰ ⵜⴰⵙⵎⵎⴰⵔⵜ",
+  "badgeUnlocked": "ⵜⴰⴼⵓⵙⵜ ⵏⵉ ⵜⵎⵙⵏⵏⴰ",
+  "level": "ⵜⵓⴳⵍⴰⵍⵜ",
+  "quick": "ⴰⵙⴻⵏⴻⴹ",
+  "rare": "ⵏⴰⴷⴰⵔ",
+  "rewardScreen": "ⵜⴰⵙⴻⵎⵎⵉⵏⵜ ⵏ ⵓⴳⵓⴷ",
+  "tapAnywhereToContinue": "ⴽⵡ ⵓⵏⴰ ⵏ ⵉⴷⴷⴰ ⵏⴰⵏ ⵉⵏⴰ ⵜⴰⵙⴻⴹⵉ",
+  "collected": "ⵜⴰⵙⵎⵎⴰⵔⵜ",
+  "earnMoreToUnlockThisAvatar": "ⵙⴻⴹ ⵎⴰⵣⵣⴰⵔ ⵏ ⵜⴰⴼⵓⵙⵜ ⵏ ⵜⵉⵏⵏⴰⵡ",
+  "selected": "ⵜⴰⵙⵙⵓⵎⵜ",
+  "unlocked": "ⵜⴰⴼⵓⵙⵜ",
+  "unlockBanner": "ⵜⴰⴼⵓⵙⵜ ⴰⵏ ⴱⴰⵏⵏⴰⵔ",
+  "banner": "ⴱⴰⵏⵏⴰⵔ",
+  "unlockThis": "ⵜⴰⴼⵓⵙⵜ ⵏ ⵓⵙⵙ",
+  "confirmPurchase": "ⵜⴰⵙⵙⴰⵍⵍⵓ ⵏ ⵜⵓⵏⴰⵡⵍⴰⵢ",
+  "avatarUnlocked": "ⵜⴰⴼⵓⵙⵜ ⵏ ⵜⵉⵏⵏⴰⵡ",
+  "enjoy": "ⵉⵎⵎⴰⵙ",
 
+  "doYouWantToUnlockThis": "ⴰⵢⵏⴰ ⵏⵓⵙⵙⴰ ⵜⴰⴼⵓⵙⵜ ⵏ ⵓⵙⵙ?",
+  "go": "ⴰⵣⵓ",
+  "profileSaved": "ⵖⵓⴷ ⴰⵏ ⵖⵓⴷⴷ",
+  "nameRule": "ⴰⵙⴻⵏ ⵏⴰⵡ ⵏ ⴰⵣⴳⵓⵍ ⴷ 3 ⵎⵙⵙⵓⵔ",
+  "invalidEmail": "ⵉⵎⵎⴰⵙ ⴷ ⵉⵎⵎⵓⵏⵏⴰ ⵢⴰⵏⵏⵉ",
+  "readyToSave": "ⴰⵣⵓ ⵏ ⵜⴰⵙⵙⴰⵍⵍⴰ",
+  "royalty": "ⴰⵎⵙⵙⵓⴽ",
+  "babies": "ⴰⵣⵉⴷⵉⵏ",
 
+  "myMasterpiece": "ⴰⵎⵙⵙⴰⵏ ⵏⵉ",
+  "youCanSpendONETolimToSaveOrWatchTwoAdsToSaveForFree": "ⵣⴰⵡ ⵎⴰⵙⵙⵉⵏ 5 Tolim ⵏ ⵜⴰⵣⵓⵍ ⵏⴰ ⵉⴷⴷⴰ ⵏⵉ 2 ⵏⵓⴳⴳⵓⵔ ⵏ ⵜⴰⵣⵓⵍ ⵏ ⵎⵓⴷⴷⵉⵏ",
+  "spendONETolim": "ⵎⴰⵙⵙⵉⵏ 5 Tolim",
+  "confirmSpending": "ⵜⴰⵙⵙⴰⵍⵍⵓ ⵏ ⵎⴰⵙⵙⵉⵏ",
+  "thisWillDeductONEtolimProceed": "ⵓⵙⵙⵓⴹ 5 Tolim. ⴰⵙⴳⵯⴰⵔ?",
+  "failedToSaveDrawing": "ⴰⵎⵣⵓⵍ ⵏ ⵜⴰⵣⵓⵍ ⴷ ⵓⵙⵙⴰⵏ ⴷⵉⵖ",
+  "chooseColor": "ⵣⴰⵡ ⵏ ⵓⵍⵓⵏ",
+  "brush": "ⴰⴳⵯⵔⴰⵙ",
+  "brushSize": "ⵙⵉⵏⴰ ⴷ ⴰⴳⵯⵔⴰⵙ",
+  "eraser": "ⴰⵎⵎⴰⵙ",
+  "eraserOff": "ⴰⵎⵎⴰⵙ ⵎⵓⵙⴽⵉ",
+  "eraserOn": "ⴰⵎⵎⴰⵙ ⵎⴰⴹⴰⵔ",
+  "clearCanvas": "ⵙⵎⵎⴰⵙ ⵜⴰⵣⵓⵍⵍⴰ",
+
+  "animalSound": "ⵉⵎⴰⵣⴰⵢ ⵏ ⵓⵙⴻⵏⴰⵡ",
+  "listenMode": "ⴰⵎⴰⵢⴰⵏ ⵏ ⵉⴼⵔⴰⵢ",
+  "tapAnimalsToHearTheirSounds": "ⴰⵙⴽⵓⵔ ⴰⵙⴻⵏⴰⵡ ⴷ ⵉⴼⵔⴰⵢ ⵉⵎⴰⵣⴰⵢⵏ",
+  "matchAndDrop": "ⴰⵙⵍⵉⵙ ⴷ ⴰⴱⴰⵔⴷ",
+  "dragAnimalsToMatchTheirSounds": "ⴰⴱⴰⵙⴽⴽⵓⵔ ⴰⵙⴻⵏⴰⵡ ⴷ ⵉⵙⵍⵉⵙⵏ ⵉⵎⴰⵣⴰⵢⵏ",
+  "tapTheAnimalToHearItsSound": "ⴰⵙⴽⵓⵔ ⴰⵙⴻⵏⴰⵡ ⴷ ⵉⴼⵔⴰⵢ ⵉⵎⴰⵣⴰⵢⵏ",
+  "matchTheSound": "ⵉⵙⵍⵉⵙ ⵉⵎⴰⵣⴰⵢ",
+  "listenThenDragTheCorrectAnimalIntoTheGlowingRing": "ⵉⴼⵔⴰⵢ ⴷ ⴰⴱⴰⵙⴽⴽⵓⵔ ⴰⵙⴻⵏⴰⵡ ⴰⴽⴰⴼ ⴰⴷ ⵉⴹⵓⵍⵉ ⵏ ⴰⵎⴰⵔⵉⴳⴰⵏ",
+  "rewarded": "ⵉⵙⴻⵎⵎⴰⴹ",
+  "youFinishedWith": "ⵉⴼⴻⵙ ⴷ",
+  "dontWorry": "ⴰⵎⴰ ⵜⵉⵍⴰ",
+  "youCanTryAgain": "ⵜⴰⴷ ⵜⵎⴰⵢⴰⵙⴷ ⵖⴻⵔⵖ",
+
+  "adventureMode": "ⴰⵎⴰⵙⴻⵏ ⵏ ⵉⴳⵯⵔⴰⵙ",
+  "memoryFlip": "ⵡⴰⵙⵏ ⵏ ⴰⴷⵔⴰⵔ",
+  "playThroughLevelsAndEarn": "ⴰⵣⴰⵡ ⵏ ⴰⴱⵔⴰⵣ ⴷ ⵉⵙⵙⴻⴷ ⵏ ⵉⵎⵣⵣⵓⵔⴰⵜ",
+  "survivalMode": "ⴰⵎⴰⵙⴻⵏ ⵏ ⵜⵉⴹⵓⵍⵜ",
+  "seeHowLongYouCanSurviveWithLimitedMoves": "ⵉⵡⴰ ⴷ ⵉⵎⵣⵣⵓⵔⴰⵜ ⵏ ⵓⴷⴰ ⵜⵉⵎⵎⴰⴷⴻⵏ",
+  "selectLevel": "ⴰⵎⵙⵍⵉ ⵏ ⴰⴱⵔⴰⵣ",
+  "chooseCategory": "ⴰⵎⵙⵍⵉ ⵏ ⴰⴷⵔⴰⵔ",
+  "moves": "ⵉⵎⵣⵣⵓⵔⴰⵜ",
+  "matches": "ⵉⵙⵍⵉⵙⵏ",
+  "noMovesLeft": "ⵢⴰⵏⵢ ⵉⵎⵣⵣⵓⵔⴰⵜ ⵓⵎⵓⵙⵙⵓⵏ",
+  "restartingLevel": "ⴰⴱⴰⵔⴷ ⵏ ⴰⴱⵔⴰⵣ",
+  "restart": "ⴰⴱⴰⵔⴷ",
+  "youRanOutOfMoves": "ⵢⴰⵏⵢ ⵉⵎⵣⵣⵓⵔⴰⵜ ⵓⵎⵓⵙⵙⵓⵏ",
+  "highlights": "ⵉⵙⵍⵉⵙⵏ ⵏ ⵉⴼⵔⴰⵢ",
+  "youSurvivedFor": "ⵉⴼⴻⵙ ⴷ",
+  "best": "ⴰⴼⵓⵙⵜ",
+  "andMade": "ⴷ ⵉⵙⴻⵎⵎⴰⴹ",
+  "seconds": "ⵉⵙⴻⵏⴰⵡⴰⵜ",
+  "matchesIn": "ⵉⵙⵍⵉⵙⵏ ⵏ",
+  "survivalHighlights": "ⵉⵙⵍⵉⵙⵏ ⵏ ⵜⵉⴹⵓⵍⵜ",
+  "bestSurvivalScore": "ⴰⴼⵓⵙⵜ ⵏ ⵜⵉⴹⵓⵍⵜ"
 
 }
